resources/css/post/show-post.scss
section {
    .documentation {
        position: relative;

        #share-btn {
            color: var(--couleur_police_secondaire);
            position: absolute;
            top: calc(25px - 15px);
            right: calc(35px - 15px);
            padding: 15px;
            cursor: pointer;
        }

        .header {
            .thumbnail {
                display: flex;
                justify-content: center;

                img {
                    border-radius: 1000px;
                    height: 150px;
                }
            }

            .title {
                margin: 15px 0 10px;
                text-align: center;

                &::first-letter {
                    text-transform: capitalize;
                }
            }

            & > p {
                font-weight: var(--fw-light);
                color: var(--couleur_police_secondaire);
                font-size: 1em;
                margin: 0 0 8px;

                display: flex;
                align-items: center;
                justify-content: center;

                .separator {
                    color: var(--couleur_police_secondaire);
                    font-weight: var(--fw-light);
                    display: inline-block;
                    width: 20px; //Same width as parent's horizontal gap
                    text-align: center;
                }

                i {
                    color: var(--couleur_police_secondaire);
                    font-size: 13px;
                    margin-right: 10px;
                }
            }

            #rattachement {
                opacity: 0.5;
                background-color: var(--dark-grey);
                color: var(--couleur_police_primaire);
                border-radius: 5px;
                display: flex;
                padding: 10px;
                align-items: center;
                justify-content: center;
                margin: 15px 0 0;
                font-weight: var(--fw-light);
                font-size: 0.95em;

                i {
                    color: var(--couleur_police_primaire);
                    margin-right: 10px;
                }
            }

            .tags {
                display: flex;
                flex-wrap: wrap;
                flex-direction: row;
                justify-content: center;
                gap: 8px 10px;
                margin-top: 15px;

                grid-row: 2;
                grid-column: 2;

                .tag {
                    display: inline-block;
                    color: var(--couleur_police_accentuation);
                    border-radius: 1000px;
                    align-items: center;
                    font-size: 13px;

                    padding: 6px 12px;
                }
            }
        }

        .img-container {
            display: flex;
            justify-content: center;
            align-items: center;

            img {
                max-width: 100%;
            }
        }

        .description {
            padding: 0 15px;

            &.visible {
                display: block;
            }

            & > :first-child {
                margin-top: 15px;
                padding-top: 15px;
                border-top: 1px solid var(--light-grey);
            }

            a {
                color: var(--link-color);
                font-weight: var(--fw-medium);
                text-decoration: underline;
            }

            img {
                max-width: 80%;
                max-height: 50vh;
            }

            p:has(img) {
                display: flex;
                justify-content: center;
            }

            p {
                text-align: justify;
            }
        }
    }
}

p#confidentiel {
    color: var(--confidentiel-color);
    text-align: center;

    i {
        color: var(--confidentiel-color);
        margin-right: 8px;
    }
}

.documentation > p#confidentiel {
    margin: 0;
}

